--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,6 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDcMeP0q7kG91DqE9SzcXxQgudnkxgEfBQ&callback=initMap"async defer></script>
-    <script src="script.js"async defer></script>
+    <script src="script.js"></script>
   </body>
 </html>
