--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.png">
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDcMeP0q7kG91DqE9SzcXxQgudnkxgEfBQ&callback=initMap"async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDcMeP0q7kG91DqE9SzcXxQgudnkxgEfBQ"></script>
     <script src="https://kit.fontawesome.com/768906cd1a.js" crossorigin="anonymous"></script>
   </head>
   <body>
